--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "enzyme": "^2.8.1",
     "expect": "^1.20.2",
     "express": "^4.15.2",
+    "lodash": "^4.17.4",
     "mocha": "^3.2.0",
+    "moment": "^2.18.1",
     "node-sass": "^4.5.2",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
