--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack-dev-server --hot --inline",
     "lint": "eslint src/**",
     "lint:watch": "esw -w src/**",
-    "start": "npm run build && NODE_ENV=production node server.js",
+    "start": "npm rebuild node-sass && npm run build && NODE_ENV=production node server.js",
     "test": "mocha --compilers js:babel-core/register ./test/**/*.spec.js --require ignore-styles"
   },
   "author": "",
